prevent multiple chats